# ai4ss-skills

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DESIGNPLAN.md  README.md  README.zh-CN.md  WORKFLOW.md  analysis-explainer.skill  cleaning-contract.skill  cleaning-execute.skill  codebook-parse.skill  conftest.py  did-expert.skill  latex-tables.skill  llms.txt  pyproject.toml  r-performance.skill
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
codex.skill/: README.md  SKILL.md
concept-dag-out/: schema-v0.2.md
docs/: agentrun_ai4ss_harness_deployment_report.md  agentrun_codex_deployment_notes.md  ai4ss_dsl_factory_integration.md  ai_use_ledger.csv  ai_use_ledger.example.csv  ai_use_ledger.schema.md  appserver_behavior_tests.md  artifact-goal-notes.md  auto_research_framework_reading_note.md  cli-reference.md  config-schema.md  installation.md  methodology_foundation_audit.md  methodology_foundations.md  methodology_source_matrix.csv  otel-collector-file.yaml  research_workspace_contract.md  scholar_workbenches.md  skill_expected_outputs_social_science.md  skill_use_eval.simulated_report.md  skillpack_gap_map.md  skillpack_workflow_contract.md  skills.md
hooks/: guard_generated_outputs.py  hooks.json
linear-issue/: SKILL.md
scripts/: audit_skill_handoffs.py  research_workspace_contract.py  run_agent_runtime_harness_eval.py  run_blind_skill_use_eval.py  run_factory_e2e_apsr_pdf_eval.py  run_factory_level_eval.py  run_factory_relay_eval.py  run_live_blind_skill_use_eval.py  (+14 more)
skills/: README.md
(+503 files in other folders)
