[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goal-cli"
version = "0.1.0"
description = "Keep coding agents focused on the thing you asked for"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Adrian" }]
dependencies = [
    "opentelemetry-api>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
goal-cli = "goal_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
